nav fixes, gallery, grid

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <!-- The header needs to be outside of the main tag if you are going to position fix it. -->
     <header data-fixed="fixed-item">
         <div>
+            <section id="logo">
+                <img src="img/nav/logo.svg" alt="logo">
+            </section>
             <!-- burger icon -->
             <section id="burger-icon" >
                 <i class="fas fa-bars"></i>
@@ -61,6 +64,14 @@
         </section>
 
         <section id="visit">
+            <div class="circles">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <!-- visit -->
             <div>
                 <h2>visiting the <br><span>WISSAHICKON VALLEY PARK</span></h2>
@@ -74,18 +85,13 @@
                 <button type="button" name="WHAT TO DO">WHAT TO DO</button>
                 <button type="button" name="WHERE TO GO">WHERE TO GO</button>
             </aside>
-
-            <div>
-                <!-- iconimg -->
-                <img src="img/visit/elements.svg" alt="Elements of the Trails">
-            </div>
         </section>
 
         <section id="plan">
             <div>
-                <h2>plan a <br><span>VISIT</span></h2>
-            </div>
-            <div>
+                <aside>
+                    <h2>plan a <br><span>VISIT</span></h2>
+                </aside>
                 <aside>
                     <div></div>
                     <div>
@@ -110,14 +116,16 @@
             </div>
         </section>
 
+        <!-- color bars -->
+        <section id="bars1">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+
+
         <section id="trail">
-
-            <!-- color bars -->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
             <div>
                 <h2>choose your <br><span>TRAIL</span></h2>
             </div>
@@ -149,19 +157,34 @@
                     <span>MOST AMBITIOUS</span>
                 </div>
             </div>
-            <aside></aside>
+            <!-- <aside></aside> -->
         </section>
 
         <section id="gallery">
             <div>
                 <ul>
+                    <!-- images -->
                     <li></li>
                     <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <!-- colors -->
                     <li></li>
                     <li></li>
                     <li></li>
                 </ul>
             </div>
+        </section>
+
+        <section id="hill1">
+            <div></div>
+        </section>
+
+
+        <!-- color bars -->
+        <section id="bars2">
             <div></div>
             <div></div>
             <div></div>
@@ -175,7 +198,7 @@
             </div>
             <div>
                 <div>
-                    <h3>Thursday trail service</h3>
+                    <h3>Thursday hike and trail service</h3>
                     <p>August 15 <br>9:30 am – 12:30 pm</p>
                 </div>
                 <button type="button" name="REGISTER">REGISTER</button>
@@ -183,7 +206,7 @@
 
             <div>
                 <div>
-                    <h3>Fitness hikes with Andi Wingert and Debbie Hoellein</h3>
+                    <h3>Fitness hikes with Andi Wingert</h3>
                     <p>August 13 <br>9:00 am – 11:30 am</p>
                 </div>
                 <button type="button" name="REGISTER">REGISTER</button>
@@ -191,7 +214,7 @@
 
             <div>
                 <div>
-                    <h3>Butterfly safari with Kris Soffa, PA master naturalist</h3>
+                    <h3>Butterfly safari with PA master naturalist</h3>
                     <p>August 19 <br>10:00 am – 12:00 pm</p>
                 </div>
                 <button type="button" name="REGISTER">REGISTER</button>
@@ -275,9 +298,11 @@
                     </li>
                 </ul>
             </div>
-            <aside></aside>
         </section>
 
+        <section id="hill2">
+            <div></div>
+        </section>
 
         <section id="contact">
             <div>
