--- a/index.html
+++ b/index.html
@@ -315,13 +315,13 @@
                 <h1>TALK TO US</h1>
                 <form action="https://formspree.io/annamcushing@gmail.com" method="POST">
                         <!-- company name -->
-                        <!-- <div>
+                        <div>
                             <label>
                                 <input type="text" placeholder="Company Name" name="Company Name">
                                 <input type="hidden" name="_next" value="http://www.gdovindesigns.com/client/drexel/web2/form/thanks.html" />
                                 <input type="text" name="_gotcha" style="display:none" />
                             </label>
-                        </div> -->
+                        </div>
                         <!-- first name -->
                         <div>
                             <label>
@@ -350,6 +350,12 @@
                             <button type="submit" class="button" value="send">Send</button>
                         </div>
                     </form>
+                <!-- <form>
+                    <input type="text" placeholder="Name" required>
+                    <input type="text" placeholder="Email" required>
+                    <input type="text" placeholder="Message" required>
+                    <button type="button" name="SEND">SEND</button>
+                </form> -->
             </div>
         </section>
 
