--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <nav data-nav="main-navigation">
 
                     <ul>
-                        <li><a href="#">VISIT</a></li>
-                        <li><a href="#">TRAILS</a></li>
-                        <li><a href="#">EVENTS</a></li>
-                        <li><a href="#">FRIENDS</a></li>
-                        <li><a href="#">FAQ </a></li>
+                        <li><a href="#visit"><i class="fas fa-leaf"></i> VISIT</a></li>
+                        <li><a href="#trail"><i class="fas fa-hiking"></i> TRAILS</a></li>
+                        <li><a href="#events"><i class="fas fa-calendar-week"></i> EVENTS</a></li>
+                        <li><a href="#friends"><i class="fas fa-user-friends"></i> FRIENDS</a></li>
+                        <li><a href="#faq"><i class="fas fa-question"></i> FAQ</a></li>
                     </ul>
                 </nav>
             </div>
@@ -60,15 +60,7 @@
         <div class="js-off-canvas-overlay" id="overlay"></div>
 
         <section id="hero">
-
-
-            <div id="video-back">
-                <video autoplay muted loop id="myVideo">
-                    <source src="trail.mp4" type="video/mp4">
-                </video>
-                <!-- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=5gZXcZ_gc-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidbacking"></iframe> -->
-
-            </div>
+            <div></div>
             <div>
                 <h1>FRIENDS OF THE WISSAHICKON <br><span>let's be friends.</span></h1>
             </div>
@@ -322,14 +314,6 @@
             <div>
                 <h1>TALK TO US</h1>
                 <form action="https://formspree.io/annamcushing@gmail.com" method="POST">
-                    <!-- company name -->
-                    <div>
-                        <label>
-                            <input type="text" placeholder="Company Name" name="Company Name">
-                            <input type="hidden" name="_next" value="http://www.gdovindesigns.com/client/drexel/web2/form/thanks.html" />
-                            <input type="text" name="_gotcha" style="display:none" />
-                        </label>
-                    </div>
                     <!-- first name -->
                     <div>
                         <label>
@@ -351,19 +335,22 @@
                     <!-- message -->
                     <div>
                         <label>
-                            <textarea placeholder="Message" name="Message"></textarea>
+                            <textarea placeholder="Comment" name="Comment"></textarea>
                         </label>
                     </div>
                     <div>
                         <button type="submit" class="button" value="send">Send</button>
                     </div>
                 </form>
-                <!-- <form>
-                    <input type="text" placeholder="Name" required>
-                    <input type="text" placeholder="Email" required>
-                    <input type="text" placeholder="Message" required>
-                    <button type="button" name="SEND">SEND</button>
-                </form> -->
+            </div>
+        </section>
+
+        <section id="video">
+            <div>
+                <div class="video-wrapper widescreen">
+                        <iframe width="658" height="370" src="https://www.youtube.com/embed/5gZXcZ_gc-4" frameborder="0" allow="autoplay=0; showinfo=0; controls=0; encrypted-media; loop=1; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+
             </div>
         </section>
 
@@ -372,9 +359,9 @@
             <div>
                 <h1>stay up with our news and all kinds of trail things</h1>
                 <ul>
-                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/FOWissahickon"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="https://twitter.com/fowissahickon"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://instagram.com/fowissahickon/"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <div>
                     <button type="button" name="SUBSCRIBE">SUBSCRIBE</button>
@@ -389,9 +376,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-
-    <!-- Vidbacking -->
-    <script src="js/jquery.vidbacking.js"></script>
 
     <script src="js/scripts.js"></script>
 </body>
