--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Your options for data-navigation-position is: left | right -->
     <!-- Your options for data-navigation-slide is: over | under | push -->
-    <section id="off-canvas-container" data-navigation-position="right" data-navigation-slide="push">
+    <!-- <section id="off-canvas-container" data-navigation-position="right" data-navigation-slide="push">
         <div>
             <button>
                 <i class="far fa-times-circle" id="close-btn"></i>
@@ -39,23 +39,43 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- The header needs to be outside of the main tag if you are going to position fix it. -->
-    <header data-fixed="fixed-item">
+    <!-- <header data-fixed="fixed-item">
         <div>
             <section id="logo">
                 <img src="img/nav/logo.svg" alt="logo">
             </section>
-            <!-- burger icon -->
+
             <section id="burger-icon">
                 <i class="fas fa-bars"></i>
             </section>
         </div>
-    </header>
+    </header> -->
 
     <main>
+
+        <header>
+            <section>
+                <button id="burger-icon">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </section>
+            <section>
+                <img src="img/nav/logo.svg" alt="logo">
+            </section>
+            <nav data-nav="main-navigation">
+                <ul>
+                    <li><a href="#visit"><i class="fas fa-leaf"></i> VISIT</a></li>
+                    <li><a href="#trail"><i class="fas fa-hiking"></i> TRAILS</a></li>
+                    <li><a href="#events"><i class="fas fa-calendar-week"></i> EVENTS</a></li>
+                    <li><a href="#friends"><i class="fas fa-user-friends"></i> FRIENDS</a></li>
+                    <li><a href="#faq"><i class="fas fa-question"></i> FAQ</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <div class="js-off-canvas-overlay" id="overlay"></div>
 
